<resources>
    <string name="app_name">ONGAndroid</string>
    <string name="testimonials">Testimonios</string>
    <string name="news">Ultimas Novedades</string>
    <string name="name">Nombre y Apellido</string>
    <string name="role">Rol que desempeña</string>
    <string name="testimony">testimoniotestimoniotestimoniotestimoniotestimoniotestimoniotestimoniotestimoniotestimoniotestimoniotestimoniotestimoniotestimonio</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_title_placeholder">Hola! Bienvenidx</string>
    <string name="welcome_body_placeholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="retry">Reintentar</string>
    <string name="generalError">Inicio - Error general</string>
    <string name="on_testimonials_loading_error">Something went wrong, couldn\'t load testimonials</string>
    <string name="on_contact_sending_error">Something went wrong, couldn\'t sent the request</string>
    <string name="retryCall">Reintentar</string>
    <string name="informationError">A ocurrido un error obteniendo la información</string>
    <string name="an_error_has_occurred_obtaining_the_information">Ha ocurrido un error obteniendo la información</string>
    <string name="activities_title">Actividades</string>
    <string name="news_view_title">Novedades</string>
    <string name="titleDialog">Detalle</string>
    <string name="nameStaffDialog">*Name*</string>
    <string name="rollStaffDialog">*Roll*</string>
    <string name="facebookStaffDialog">*Facebook*</string>
    <string name="linkedinStaffDialog">*Linkedin*</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button_text">Login</string>
    <string name="login_signup_text">No tienes cuenta? Registrate!</string>
    <string name="sign_up_name_hint">Nombre y Apellido</string>
    <string name="sign_up_email_hint">Email</string>
    <string name="sign_up_password_hint">Contraseña</string>
    <string name="sign_up_repeat_password_hint">Repite la contraseña</string>
    <string name="sign_up_button_text">Registrarme</string>
    <string name="sign_up_login_text">Ya tienes cuenta? Ingresa!</string>
    <string name="logo_content_description">Logo de Somos Mas</string>
    <string name="you_want_to_contribute">¿Quieres contribuir?</string>
    <string name="donate">Donar</string>
    <string name="contact_us">¡Contactate con nosotros!</string>
    <string name="name_and_surname">Nombre y Apellido</string>
    <string name="email">Email</string>
    <string name="message">Mensaje</string>
    <string name="send_message">Enviar mensaje</string>
    <string name="error_contact_name_warning">Debe completar su nombre solo con letras y con un minimo de 3 caracteres</string>
    <string name="error_contact_mail_warning">Por favor ingrese un mail valido</string>
    <string name="error_contact_message_warning">Por favor escriba un minimo de 10 caracteres</string>
    <string name="successfully_contact_data_post_message">Datos enviados correctamente, pronto nos comunicaremos con usted, Gracias!!</string>
    <string name="successfully_sign_up_new_user">Usuario registrado exitosamente</string>
    <string name="something_went_wrong">Algo salió mal</string>
    <string name="facebook_login">Facebook</string>
    <string name="Google_login">Google</string>
    <string name="facebook_app_id">448054383871698</string>
    <string name="fb_login_protocol_scheme">fb448054383871698</string>
    <string name="facebook_client_token">da04dac46dbe297f8f55c33e090998ab</string>
    <string name="on_facebook_login_error">Something went wrong, couldn\'t login with facebook, please try again</string>
    <string name="login_general_error_msg">El email/contraseña ingresado es incorrecto</string>

</resources>

