<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.contactFragment.ContactFragment">

    <include
        android:id="@+id/ivLogo"
        layout="@layout/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvContributor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/density16"
        android:layout_marginTop="@dimen/density16"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/you_want_to_contribute"
        android:textColor="@color/black"
        android:textSize="@dimen/scaleable24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLogo" />

    <Button
        android:id="@+id/btnDonate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/density10"
        android:backgroundTint="@color/red"
        android:elevation="@dimen/density16"
        android:text="@string/donate"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/tvContributor"
        app:layout_constraintTop_toBottomOf="@+id/tvContributor" />

    <TextView
        android:id="@+id/contact_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/density30"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/contact_us"
        android:textColor="@color/black"
        android:textSize="@dimen/scaleable24"
        app:layout_constraintStart_toStartOf="@id/tvContributor"
        app:layout_constraintTop_toBottomOf="@+id/btnDonate" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/density16"
        android:hint="@string/name_and_surname"
        app:boxStrokeColor="@color/blue"
        app:boxStrokeErrorColor="@color/red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_tv_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:inputType="text"
            android:textSize="@dimen/scaleable13" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/density16"
        android:hint="@string/email"
        app:boxStrokeColor="@color/blue"
        app:boxStrokeErrorColor="@color/red"
        app:layout_constraintEnd_toEndOf="@+id/tf_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tf_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/poppins_regular"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/scaleable16" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_query"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="@dimen/density188"
        android:layout_margin="@dimen/density16"
        android:hint="@string/message"
        app:boxStrokeColor="@color/blue"
        app:boxStrokeErrorColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tf_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_query"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/poppins_regular"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:minLines="4"
            android:textSize="@dimen/scaleable13" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/density60"
        android:layout_margin="@dimen/density16"
        android:background="@color/pale_grey"
        android:backgroundTint="@color/blue"
        android:enabled="false"
        android:text="@string/send_message"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/tf_query"
        app:layout_constraintTop_toBottomOf="@+id/tf_query" />

    <!--replace with reusable spinner-->
    <ProgressBar
        android:id="@+id/progressBarForTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ProgressBar>
</androidx.constraintlayout.widget.ConstraintLayout>
